chore: update package

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "lint": "eslint .",
     "test": "jest",
     "pub": "cross-var yarn publish --access public --new-version $npm_package_version",
-    "release:major": "git pull && standard-version --release-as major && git push --follow-tags && yarn pub",
-    "release:patch": "git pull && standard-version --release-as patch && git push --follow-tags && yarn pub",
-    "release:minor": "git pull && standard-version --release-as minor && git push --follow-tags && yarn pub"
+    "release:major": "git pull && standard-version --release-as major && git push --follow-tags",
+    "release:patch": "git pull && standard-version --release-as patch && git push --follow-tags",
+    "release:minor": "git pull && standard-version --release-as minor && git push --follow-tags"
   },
   "dependencies": {
     "@lasalefamine/eslint-config-base": "0.2.4",
