--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "27.4.3",
     "standard-version": "9.3.2",
     "stylelint": "14.1.0",
+    "stylelint-config-standard": "^24.0.0",
     "typescript": "4.5.2"
   }
 }
