--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     "release:major": "git pull && standard-version --release-as major && git push --follow-tags",
     "release:patch": "git pull && standard-version --release-as patch && git push --follow-tags",
     "release:minor": "git pull && standard-version --release-as minor && git push --follow-tags",
-    "update:deps": "yarn upgrade-interactive --latest && yarn upgrade"
+    "update:deps": "npx npm-update"
   },
   "peerDependencies": {
-    "stylelint-config-standard": "^24.0.0"
+    "stylelint-config-standard": ">=28.0.0"
   },
   "devDependencies": {
-    "@lasalefamine/eslint-config-base": "1.2.0",
-    "@typescript-eslint/eslint-plugin": "5.6.0",
-    "@typescript-eslint/parser": "5.6.0",
+    "@lasalefamine/eslint-config-base": "2.0.7",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
     "cross-var": "1.1.0",
-    "eslint": "8.4.1",
-    "eslint-plugin-import": "2.25.3",
-    "jest": "27.4.3",
-    "standard-version": "9.3.2",
-    "stylelint": "14.1.0",
-    "stylelint-config-standard": "^24.0.0",
-    "typescript": "4.5.2"
+    "eslint": "8.23.1",
+    "eslint-plugin-import": "2.26.0",
+    "jest": "29.0.3",
+    "standard-version": "9.5.0",
+    "stylelint": "14.12.0",
+    "stylelint-config-standard": "^28.0.0",
+    "typescript": "4.8.3"
   }
 }
