--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.6.0",
   "description": "Stylelint configuration based on my experience and taste",
   "main": "index.js",
+  "publishConfig": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/equinusocio/stylelint-config-equinusocio"
@@ -28,7 +29,7 @@
     "update:deps": "npx npm-update"
   },
   "peerDependencies": {
-    "stylelint-config-standard": ">=28.0.0"
+    "stylelint-config-standard": "*"
   },
   "devDependencies": {
     "@lasalefamine/eslint-config-base": "2.0.7",
