--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
-    "pub": "cross-var yarn publish --access public --new-version $npm_package_version",
+    "pub": "cross-var pnpm publish --access public",
     "release:major": "git pull && standard-version --release-as major && git push --follow-tags",
     "release:patch": "git pull && standard-version --release-as patch && git push --follow-tags",
     "release:minor": "git pull && standard-version --release-as minor && git push --follow-tags",
     "update:deps": "npx npm-update"
   },
   "peerDependencies": {
-    "stylelint-config-standard": "^27.0.0"
+    "stylelint-config-standard": "^28.0.0"
   },
   "devDependencies": {
     "@lasalefamine/eslint-config-base": "2.0.7",
@@ -38,10 +38,11 @@
     "cross-var": "1.1.0",
     "eslint": "8.23.1",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "29.0.3",
     "standard-version": "9.5.0",
-    "stylelint": "14.12.0",
-    "stylelint-config-standard": "^28.0.0",
+    "stylelint": "14.15.0",
+    "stylelint-config-standard": "28.0.0",
     "typescript": "4.8.3"
   }
 }
