--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-config-equinusocio",
-  "version": "1.6.7",
+  "version": "1.6.8",
   "description": "Stylelint configuration based on my experience and taste",
   "main": "index.js",
   "publishConfig": {},
@@ -29,20 +29,20 @@
     "update:deps": "npx npm-update"
   },
   "peerDependencies": {
-    "stylelint-config-standard": "^29.0.0"
+    "stylelint-config-standard": ">=29.0.0"
   },
   "devDependencies": {
     "@lasalefamine/eslint-config-base": "2.0.7",
-    "@typescript-eslint/eslint-plugin": "5.38.0",
-    "@typescript-eslint/parser": "5.38.0",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "5.51.0",
     "cross-var": "1.1.0",
-    "eslint": "8.23.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "jest": "29.0.3",
+    "eslint": "8.33.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jest": "29.4.2",
     "standard-version": "9.5.0",
-    "stylelint": "14.15.0",
-    "stylelint-config-standard": "29.0.0",
-    "typescript": "4.8.3"
+    "stylelint": "15.0.0",
+    "stylelint-config-standard": ">=30.0.1",
+    "typescript": "4.9.5"
   }
 }
