--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "update:deps": "npx npm-update"
   },
   "peerDependencies": {
-    "stylelint-config-standard": ">=29.0.0"
+    "stylelint-config-standard": ">=29.0.0",
+    "stylelint-gamut": ">=1.3.1"
   },
   "devDependencies": {
     "@lasalefamine/eslint-config-base": "2.0.7",
@@ -43,6 +44,7 @@
     "standard-version": "9.5.0",
     "stylelint": "15.0.0",
     "stylelint-config-standard": ">=30.0.1",
+    "stylelint-gamut": "1.3.1",
     "typescript": "4.9.5"
   }
 }
