--- a/package.json
+++ b/package.json
@@ -21,30 +21,28 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest",
     "pub": "cross-var pnpm publish --access public",
     "release:major": "git pull && standard-version --release-as major && git push --follow-tags",
     "release:minor": "git pull && standard-version --release-as minor && git push --follow-tags",
     "release:patch": "git pull && standard-version --release-as patch && git push --follow-tags",
-    "update:deps": "npx npm-update"
+    "update:deps": "npx npm-upgrade"
   },
   "peerDependencies": {
-    "stylelint-config-standard": ">=29.0.0",
+    "stylelint-config-standard": ">=33.0.0",
     "stylelint-gamut": ">=1.3.1"
   },
   "devDependencies": {
-    "@lasalefamine/eslint-config-base": "2.0.7",
-    "@typescript-eslint/eslint-plugin": "5.51.0",
-    "@typescript-eslint/parser": "5.51.0",
+    "@lasalefamine/eslint-config-base": "3.0.2",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "cross-var": "1.1.0",
-    "eslint": "8.33.0",
+    "eslint": "8.41.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jest": "29.4.2",
     "standard-version": "9.5.0",
-    "stylelint": "15.0.0",
-    "stylelint-config-standard": ">=30.0.1",
+    "stylelint": "15.6.2",
+    "stylelint-config-standard": ">=33.0.0",
     "stylelint-gamut": "1.3.1",
-    "typescript": "4.9.5"
+    "typescript": "5.0.4"
   }
 }
