--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
-    "pub": "cross-var pnpm publish --access public",
-    "release:major": "git pull && standard-version --release-as major && git push --follow-tags",
-    "release:minor": "git pull && standard-version --release-as minor && git push --follow-tags",
-    "release:patch": "git pull && standard-version --release-as patch && git push --follow-tags",
+    "change": "changeset",
+    "release": "changeset version && changeset publish && git push --follow-tags",
     "update:deps": "npx npm-upgrade"
   },
   "peerDependencies": {
@@ -32,6 +30,7 @@
     "stylelint-gamut": ">=1.3.1"
   },
   "devDependencies": {
+    "@changesets/cli": "2.26.1",
     "@lasalefamine/eslint-config-base": "3.0.2",
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "@typescript-eslint/parser": "5.59.8",
