--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "update:deps": "npx npm-upgrade"
   },
   "peerDependencies": {
-    "stylelint-config-standard": ">=33.0.0",
-    "stylelint-gamut": ">=1.3.1",
+    "stylelint": ">=16",
+    "stylelint-config-standard": ">=36",
+    "stylelint-gamut": "1.x.x",
     "stylelint-stylistic": ">=0.4.3"
   },
   "devDependencies": {
