--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "update:deps": "npx npm-upgrade"
   },
   "peerDependencies": {
+    "stylelint": ">=15.10.3",
     "stylelint-config-standard": ">=33.0.0",
     "stylelint-gamut": ">=1.3.1",
     "stylelint-stylistic": ">=0.4.3"
@@ -38,11 +39,11 @@
     "cross-var": "1.1.0",
     "eslint": "8.48.0",
     "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "standard-version": "9.5.0",
     "stylelint": "15.10.3",
-    "stylelint-config-standard": ">=34.0.0",
-    "stylelint-gamut": ">=1.3.3",
+    "stylelint-config-standard": "34.0.0",
+    "stylelint-gamut": "1.3.3",
     "typescript": "5.2.2"
   }
 }
