--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-config-equinusocio",
-  "version": "1.10.0",
+  "version": "1.10.1",
   "description": "Stylelint configuration based on my experience and taste",
   "main": "index.js",
   "publishConfig": {},
@@ -26,20 +26,15 @@
     "update:deps": "npx npm-upgrade"
   },
   "peerDependencies": {
+    "@stylistic/stylelint-plugin": ">=2",
     "stylelint": ">=16",
-    "stylelint-config-standard": ">=36.0.0",
-    "stylelint-gamut": ">=1.3.1",
-    "stylelint-stylistic": ">=0.4.3"
+    "stylelint-config-standard": ">=36",
+    "stylelint-gamut": ">=1"
   },
   "devDependencies": {
     "@changesets/cli": "2.27.1",
-    "@lasalefamine/eslint-config-base": "3.1.0",
-    "@typescript-eslint/eslint-plugin": "7.1.0",
-    "@typescript-eslint/parser": "7.1.0",
+    "@stylistic/stylelint-plugin": "^2.1.0",
     "cross-var": "1.1.0",
-    "eslint": "8.57.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-simple-import-sort": "12.0.0",
     "standard-version": "9.5.0",
     "stylelint": ">=16.2.1",
     "stylelint-config-standard": ">=36.0.0",
