--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "lint": "eslint .",
     "change": "changeset",
     "release": "changeset version && changeset publish && git push --follow-tags",
-    "update:deps": "npx npm-upgrade"
+    "update:deps": "pnpm dlx npm-upgrade"
   },
   "peerDependencies": {
-    "@stylistic/stylelint-plugin": ">=2",
-    "stylelint": ">=16",
-    "stylelint-config-standard": ">=36",
+    "@stylistic/stylelint-plugin": ">=3",
+    "stylelint": ">=16.8.2",
+    "stylelint-config-standard": ">=37",
     "stylelint-gamut": ">=1"
   },
   "devDependencies": {
-    "@changesets/cli": "2.27.1",
-    "@stylistic/stylelint-plugin": "^2.1.0",
+    "@changesets/cli": "2.27.11",
+    "@stylistic/stylelint-plugin": ">=3",
     "cross-var": "1.1.0",
     "standard-version": "9.5.0",
-    "stylelint": ">=16.2.1",
-    "stylelint-config-standard": ">=36.0.0",
-    "stylelint-gamut": ">=1.3.4",
-    "typescript": "5.3.3"
+    "stylelint": "^16.13.2",
+    "stylelint-config-standard": ">=37",
+    "stylelint-gamut": "^1.3.4",
+    "typescript": "5.7.3"
   }
 }
