--- a/package.json
+++ b/package.json
@@ -27,18 +27,16 @@
   },
   "peerDependencies": {
     "@stylistic/stylelint-plugin": ">=3",
-    "stylelint": ">=16.8.2",
-    "stylelint-config-standard": ">=37",
-    "stylelint-gamut": ">=1"
+    "stylelint": ">=16.13.0",
+    "stylelint-config-recommended": ">=15"
   },
   "devDependencies": {
     "@changesets/cli": "2.27.11",
-    "@stylistic/stylelint-plugin": ">=3",
+    "@stylistic/stylelint-plugin": "3.1.1",
     "cross-var": "1.1.0",
     "standard-version": "9.5.0",
-    "stylelint": "^16.13.2",
-    "stylelint-config-standard": ">=37",
-    "stylelint-gamut": "^1.3.4",
+    "stylelint": "16.13.2",
+    "stylelint-config-recommended": "15.0.0",
     "typescript": "5.7.3"
   }
 }
